# rust_ime

./: .gitignore  BUGREPORT.md  BUG_REPORT.md  Cargo.toml  FUTURE_ROADMAP.md  GEMINI.md  INSTALL_GUIDE.md  INSTALL_GUIDE_ZH.md  README.md  ROADMAP.md  build.rs  check_jianpin.py  check_sm_final.py  clippy.toml  config.json  debug_sm.rs  deny.toml  fix_ime_bug.sh  icon.rc  install.sh  make_portable.ps1  make_release.sh  make_windows_release.ps1  rust-ime.desktop  rust-ime.iss  stroke_collision_report.txt  sync_dev.ps1  test_all_hotkeys.py  test_arrow_keys.py  test_core_logic.sh  test_custom_flipping.py  test_fuzhuma.sh  test_jianpin.sh  test_match.py  test_reorder.py  test_reorder_bug.py  unmatched_words.txt  update_windows.ps1
.github/workflows/: ci.yml  release.yml
configs/: appearance.json  files.json  hotkeys.json  input.json
data/chinese/: trie.data  trie.index
dicts/chinese/: Chinese character list from 2.5 billion words corpus ordered by frequency.csv  chars.json  chars_old.json  level2.json  level3_raw.json  punctuation.json  syllables.txt
dicts/emoji/: emoji.json
dicts/english/: combined_dict.json  syllables.txt
dicts/japanese/: syllables.txt
dicts/stroke/: syllables.txt
protocols/: input-method-v2.xml  virtual-keyboard-v1.xml
referdict/: changjianduoyinzi.txt  level2_raw.json  polyphones_cleaned.txt  real_4char.txt  words_first_2char.txt  words_first_3char.txt
referdict/dict creating/: fake_4char.txt  gen_multi_char_words.py  words_first_long.txt
release_pkg/: install.sh
src/: class_factory.rs  config.rs  lib.rs  main.rs  registry.rs  text_service.rs
src/engine/: compiler.rs  compositor.rs  config_manager.rs  dispatcher.rs  keys.rs  mod.rs  ngram.rs  pipeline.rs  processor.rs  scheme.rs  segmenter.rs  session.rs  traditional.rs  trie.rs
src/platform/: fonts.rs  mod.rs  traits.rs
src/ui/: candidate.slint  gui.rs  gui_slint.rs  ime_ui.slint  linux.rs  linux_notify.rs  main.slint  mod.rs  painter.rs  slint_window.rs  status_bar.slint  tray.rs  tray_menu.slint  web.rs  windows.rs
static/: help.html  index.html
static/css/: style.css
static/js/: settings.js
static/settings/: appearance.html  dictionary.html  dictionary_viewer.html  doublepinyin.html  fuzzy.html  hotkeys.html  keybehavior.html  keystrokes.html  layout.html  learning.html  punctuation.html  (+1 more)
tools/: add_stroke_aux.py  add_stroke_aux_sbsrf.py  add_traditional_to_dict.py  add_weights_to_words.py  add_word_stroke_aux.py  analyze_stroke_collisions.py  analyze_stroke_stats.py  audit_dictionary.py  capitalize_proper_nouns.py  check_sbsrf_format.py  cleanup_main_dict.py  convert_capital_to_json.py  convert_en_dict.py  convert_level_dicts.py  enrich_stroke_dict.py  enrich_stroke_dict_v2.py  extract_high_freq.py  extract_new_words.py  fix_char_weights.py  fix_docs.py  fix_docs_final.py  fix_docs_v3.py  gen_emoji_dict.py  gen_stroke_dict.py  gen_stroke_words.py  generate_jianpin_json.py  get_mistaken_codes.py  list_unmatched_words.py  stroke_parser.py  sync_all_chars.py  sync_dicts_with_rime.py  test_stroke_logic.py  update_char_weights.py  update_processor.py  update_readme.py  update_stroke_aux_v2.py  update_stroke_weights.py  verify_stroke.py
(+164 files in other folders)
