[package]
name = "rust-ime"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
notify-rust = "4"
arboard = "3.2"
users = "0.11"
signal-hook = "0.4.1"
daemonize = "0.5"
libc = "0.2.180"
ksni = "0.2.1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rust-embed = "8.2"
tower-http = { version = "0.5", features = ["full"] }
mime_guess = "2.0"
atty = "0.2"
reqwest = { version = "0.12", features = ["blocking"] }
urlencoding = "2.1"
open = "5.1"
nix = { version = "0.27", features = ["poll"] }
fst = "0.4"
memmap2 = "0.9"
rand = "0.8"
bitflags = "2.4"
tiny-skia = "0.11"
# GTK 4 依赖
gtk4 = { version = "0.7", package = "gtk4", features = ["v4_6"] }
gtk4-layer-shell = "0.2"
glib = "0.17"
gdk4 = "0.7"
pango = "0.17"

# Wayland protocols for IME
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging", "unstable"] }
wayland-cursor = "0.31"
zbus = { version = "4.4", features = ["blocking"] }

[build-dependencies]

[[bin]]
name = "rust-ime"
path = "src/main.rs"

[[bin]]
name = "compile_dict"
path = "src/bin/compile_dict.rs"
