[package]
name = "rust-ime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
notify-rust = "4"
arboard = "3.2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rust-embed = "8.2"
tower-http = { version = "0.5", features = ["full"] }
mime_guess = "2.0"
atty = "0.2"
reqwest = { version = "0.12", features = ["blocking"] }
urlencoding = "2.1"
open = "5.1"
fst = "0.4"
memmap2 = "0.9"
rand = "0.8"
bitflags = "2.4"
image = "0.24"
log = "0.4"
raw-window-handle = "0.6"
slint = "1.9"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.1"
users = "0.11"
signal-hook = "0.4.1"
daemonize = "0.5"
libc = "0.2.180"
ksni = "0.2.1"
nix = { version = "0.27", features = ["poll"] }

# Wayland protocols for IME
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging", "unstable"] }
wayland-cursor = "0.31"
zbus = { version = "4.4", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Media",
    "Win32_Media_Audio",
    "implement",
] }
windows-core = "0.52"

[build-dependencies]
slint-build = "1.9"
winres = "0.1"

[[bin]]
name = "rust-ime"
path = "src/main.rs"

[lib]
name = "rust_ime_tsf_v3"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
